@@ -1,0 +1,5 @@
+	.rept	0x3b4
+	nop
+	.endr
+	jal	foo
+	jal	foo
