@@ -671,6 +671,9 @@ if { [istarget mips*-*-*] } then {
 	    run_dump_test "elf-rel-xgot-n64"
 	}
 	run_dump_test "elf-rel17"
+	if $has_newabi {
+	    run_dump_test "elf-rel18"
+	}
 
 	run_dump_test "${tmips}${el}empic"
 	run_dump_test "empic2"
